--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,17 @@
 <h1>Home#Top</h1>
 
+<div class="alert alert-warning alert-with-icon">
+  <div class="alert-wrapper">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <i class="nc-icon nc-simple-remove"></i>
+    </button>
+    <div class="message">
+      <i class="nc-icon nc-bell-55"></i>
+      This is a notification with close button and icon.
+    </div>
+  </div>
+</div>
+
 <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container">
     <a class="navbar-brand" href="#">Navbar</a>
