delete unused view file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,10 @@
     <header>
       <nav>
         <% if user_signed_in? %>
-        <%= current_user.name %>
-        <%= link_to 'プロフィール変更', edit_user_registration_path %>
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to 'サインアップ', new_user_registration_path %>
-        <%= link_to 'ログイン', new_user_session_path %>
+          <%= current_user.name %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign in with Twitter", omniauth_authorize_path(:user, :twitter) %><br />
         <% end %>
       </nav>
     </header>
