create test page

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -4,3 +4,40 @@
 <% else %>
   <%= link_to "ツイッターでログイン！", omniauth_authorize_path(:user, :twitter), class: "btn btn-twitter" %><br />
 <% end %>
+
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿<br>みんなの通信簿</p>
+<p>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！<br>みんなの通信簿！！</p>
