--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@
  *
  */
 
+// paper-lit pro 2 template
 @import "templates/css/paper-kit.min";
 @import "templates/css/bootstrap.min";
 @import "templates/scss/paper-kit";
+
+// modules
+@import "modules/navbar"
