--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "ツイッターでログイン", omniauth_authorize_path(:user, :twitter), class: "nav-link" %>
+                <%= link_to "Twitterでログイン", omniauth_authorize_path(:user, :twitter), class: "nav-link" %>
               </li>
             <% end %>
           </ul>
