--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <%= render "shared/navbar" %>
+      <%= render "shared/top_navbar" %>
     </header>
     <%= yield %>
     <%= render "shared/bottom_navbar"%>
