--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -8,13 +8,13 @@
         <% end %>
       </div>
       <div class="col-4 text-center">
-        <%= active_link_to home_test1_path, class: "bottom-nav-link" do %>
+        <%= active_link_to "#", class: "bottom-nav-link" do %>
           <i class="fas fa-box-open fa-lg"></i><br>
           <small>新着の評定</small>
         <% end %>
       </div>
       <div class="col-4 text-center">
-        <%= active_link_to home_test2_path, class: "bottom-nav-link" do %>
+        <%= active_link_to "#", class: "bottom-nav-link" do %>
           <i class="fas fa-users fa-lg"></i><br>
           <small>友達の通信簿</small>
         <% end %>
