--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,7 @@
 @import "templates/scss/paper-kit";
 
 // modules
-@import "modules/navbar"
+@import "modules/navbar";
+
+// bases
+@import "bases/shared";
