--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -1,8 +1,13 @@
 @media (max-width: 575px) {
   .sp-cancel-p-container {
-    margin-left: -15px;
-    margin-right: -15px;
+    padding-left: 0;
+    padding-right: 0;
+    overflow: hidden;
   }
+}
+
+.bg-menu {
+  background: #444444 !important;
 }
 
 .bg-blackboard {
