--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -1,14 +1,14 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <div class="col-sm-4 col-2">
+      <div class="col-md-4 col-2">
         <% if user_signed_in? %>
           <%= image_tag current_user.image, width: "40px" %>
         <% end %>
       </div>
-      <div class="col-sm-4 col-8 text-center">
-        <%= image_tag "service_title.png", width: "210px", class: "" %>
+      <div class="col-md-4 col-8 text-center">
+        <%= image_tag "service_title.png", width: "210px" %>
       </div>
-      <div class="col-sm-4 col-2">
+      <div class="col-md-4 col-2 text-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
         </button>
@@ -16,13 +16,13 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <a class="nav-link" href="#">新着の評定</a>
+                <%= link_to "新着の評定", "#", class: "nav-link pl-0" %>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">友達の通信簿</a>
+                <%= link_to "友達の通信簿", "#", class: "nav-link pl-0" %>
               </li>
               <li class="nav-item">
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link pl-0" %>
               </li>
             <% else %>
               <li class="nav-item">
