change class name

--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -1,5 +1,5 @@
 @media (max-width: 575px) {
-  .sp-cancel-p-container {
+  .sp-cancel-container-padding {
     padding-left: 0;
     padding-right: 0;
     overflow: hidden;
