--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container sp-cancel-p-container"> <!-- spサイズのときだけ、containerのpadding(15px)がなくなるよう調整。colのpaddingの数値が15pxで同じであり、調整可能。 -->
+<div class="container sp-cancel-container-padding"> <!-- spサイズのときだけ、containerのpadding(15px)がなくなるよう調整。colのpaddingの数値が15pxで同じであり、調整可能。 -->
 <%# 募集のシェアを常に出す必要があるかは検討 %>
   <section>
     <div class="text-center col-12">
