change class name (bg-menu => bg-section-menu)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
     </div>
   </section>
   <section>
-    <p class="text-light bg-menu font-weight-bold pt-2 pb-2 mb-4 col-12">${name}さんの通信簿</p>
+    <p class="text-light bg-section-menu font-weight-bold pt-2 pb-2 mb-4 col-12">${name}さんの通信簿</p>
     <div class="col-12 text-center">
       <%# TODO 通信簿を動的にする %>
       <!-- BEGIN: card -->
@@ -37,7 +37,7 @@
       <% end %>
     </section>
     <section>
-      <p class="text-light bg-menu font-weight-bold pt-2 pb-2 col-12">友達の通信簿</p>
+      <p class="text-light bg-section-menu font-weight-bold pt-2 pb-2 col-12">友達の通信簿</p>
       <%# TODO 通信簿を動的にする %>
       <%= link_to "#" do %>
         <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3 col-12"%>
