create footer html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <%= render "shared/top_navbar" %>
     </header>
     <%= yield %>
-    <%= render "shared/bottom_navbar"%>
+    <footer>
+      <%= render "shared/footer" %>
+    </footer>
+    <%= render "shared/bottom_navbar" %>
   </body>
 </html>
