--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-footer" style="height: 180px;">
+<div class="bg-footer footer-height">
   <ul class="nav justify-content-center pt-3">
     <li class="nav-item">
       <%= link_to "利用規約", "#", class: "nav-link text-secondary" %>
