--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -6,8 +6,11 @@
   }
 }
 
-.bg-section-menu {
+.section-menu {
   background: #444444 !important;
+  font-weight: bold;
+  color: #ffffff;
+  padding: 8px 15px;
 }
 
 .bg-blackboard {
