--- a/app/views/shared/_book-card.html.erb
+++ b/app/views/shared/_book-card.html.erb
@@ -1,4 +1,4 @@
-<div class="card col-md-6 offset-md-3 mb-3 col-12 bg-blackboard" data-background="color" data-color="brown" data-radius="none">
+<div class="card bg-blackboard col-md-6 offset-md-3 col-12 mb-3" data-background="color" data-radius="none">
   <div class="card-body">
     <div class="author pull-left">
       <%= image_tag user.image, class: "avatar img-raised align-middle" %>
