--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -2,19 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.review-bg-good {
-  background: #FFECEC;
+.review-form {
+
+  &__bg {
+
+    &--good {
+      background: #FFECEC;
+    }
+
+    &--bad {
+      background: #E2FFF7;
+    }
+
+  }
+
+  &__label {
+    padding-top: 8px;
+    padding-left: 15px;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+
+  &__note {
+    text-align: right;
+    padding-right: 15px;
+    padding-bottom: 0.25rem;
+  }
+
 }
 
-.review-bg-bad {
-  background: #E2FFF7;
-}
-
-.review-send-parent {
+.review-send {
   position: relative;
   height: 40px;
 
-  button {
+  &__button {
     position: absolute;
     top: 50%;
     -webkit-transform : translateY(-50%);
