--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
-<div class="container sp-cancel-container-padding"> <!-- spサイズのときだけ、containerのpadding(15px)がなくなるよう調整。colのpaddingの数値が15pxで同じであり、調整可能。 -->
+<div class="container">
 <%# 募集のシェアを常に出す必要があるかは検討 %>
   <section>
-    <div class="text-center col-12 mb-4">
+    <div class="text-center mb-4">
       <h4 class="font-weight-bold mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h4>
       <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
     </div>
   </section>
   <section>
-    <p class="section-menu mb-4">${name}さんの通信簿</p>
-    <div class="text-center col-12 mb-4">
+    <p class="section-menu sp-full-width mb-4"><%= @user.name %>さんの通信簿</p>
+    <div class="text-center mb-4">
       <!-- BEGIN: BookCard -->
       <%= render partial: "shared/book-card", locals: { user: @user, reviews: @reviews } %>
       <!-- END: BookCard -->
@@ -17,18 +17,18 @@
     </div>
   </section>
   <section>
-    <p class="section-menu mb-4">友達の通信簿</p>
+    <p class="section-menu sp-full-width mb-4">友達の通信簿</p>
     <%# TODO 通信簿を動的にする %>
-    <div class="mb-3">
+    <div class="row mb-3">
       <%= link_to "#" do %>
-        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3 col-12"%>
+        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
       <% end %>
       <hr>
       <%= link_to "#" do %>
-        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3 col-12"%>
+        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
       <% end %>
     </div>
-    <div class="text-center col-12 mb-4">
+    <div class="text-center mb-4">
       <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-info btn-round" %>
     </div>
   </section>
