--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -7,11 +7,11 @@
   &__bg {
 
     &--good {
-      background: #FFECEC;
+      background: $good-pink;
     }
 
     &--bad {
-      background: #E2FFF7;
+      background: $bad-blue;
     }
 
   }
