change file structure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,5 +25,6 @@
 @import "modules/navbar";
 
 // pages
-@import "books";
-@import "reviews";
+@import "pages/books";
+@import "pages/reviews";
+@import "pages/users";
