--- a/app/assets/stylesheets/pages/books.scss
+++ b/app/assets/stylesheets/pages/books.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.card {
+
+  &__container {
+
+    &--blackbord {
+      background: $blackboard;
+    }
+  }
+}
