--- a/app/views/shared/_book-card.html.erb
+++ b/app/views/shared/_book-card.html.erb
@@ -1,11 +1,11 @@
-<div class="card bg-blackboard col-md-6 offset-md-3 col-12" data-background="color" data-radius="none">
+<div class="card card__container--blackbord col-md-6 offset-md-3 col-12" data-background="color" data-radius="none">
   <div class="card-body">
     <div class="author pull-left">
       <%= image_tag user.image, class: "avatar img-raised align-middle" %>
       <span class="align-middle font-weight-bold"><%= user.name %>の通信簿</span>
     </div>
     <span class="pull-right">
-      <%= link_to "編集", "#", class: "btn btn-sm btn-outline-warning btn-round"%>
+      <%= link_to "編集", "#", class: "btn btn-sm btn-outline-warning btn-round" %>
     </span>
     <div class="clearfix"></div>
     <p class="card-description">
