--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <%# 募集のシェアを常に出す必要があるかは検討 %>
   <section>
     <div class="text-center mb-4">
-      <h4 class="font-weight-bold mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h4>
+      <h1 class="page-heading mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h1>
       <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
     </div>
   </section>
