--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
 <%# 募集のシェアを常に出す必要があるかは検討 %>
-  <section>
-    <div class="text-center mb-4">
-      <h1 class="page-heading mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h1>
-      <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
-    </div>
+  <section class="page-heading mb-4">
+    <h1 class="page-heading__title mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h1>
+    <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
   </section>
-  <section>
-    <p class="section-menu sp-full-width mb-4"><%= @user.name %>さんの通信簿</p>
-    <div class="text-center mb-4">
+  <section class="page-section mb-4">
+    <p class="page-section__title sp-full-width mb-4"><%= @user.name %>さんの通信簿</p>
+    <div class="text-center">
       <!-- BEGIN: BookCard -->
       <%= render partial: "shared/book-card", locals: { user: @user, reviews: @reviews } %>
       <!-- END: BookCard -->
@@ -16,8 +14,8 @@
       <%= link_to "結果をシェアする！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
     </div>
   </section>
-  <section>
-    <p class="section-menu sp-full-width mb-4">友達の通信簿</p>
+  <section class="page-section mb-4">
+    <p class="page-section__title sp-full-width mb-4">友達の通信簿</p>
     <%# TODO 通信簿を動的にする %>
     <div class="row mb-3">
       <%= link_to "#" do %>
@@ -28,7 +26,7 @@
         <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
       <% end %>
     </div>
-    <div class="text-center mb-4">
+    <div class="text-center">
       <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-info btn-round" %>
     </div>
   </section>
