--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-footer footer-height">
+<footer>
   <ul class="nav justify-content-center pt-3">
     <li class="nav-item">
       <%= link_to "利用規約", "#", class: "nav-link text-secondary" %>
@@ -13,4 +13,4 @@
   <div class="text-center text-secondary mt-4">
     <small><i class="far fa-copyright mr-2"></i>2019 みんなの通信簿運営団体</small>
   </div>
-</div>
+</footer>
