--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -1,3 +1,4 @@
+<header>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <div class="col-md-4 col-2">
@@ -34,3 +35,4 @@
       </div>
     </div>
   </nav>
+</header>
