--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </div>
       <div class="col-4 text-center">
-        <%= active_link_to "#", class: "bottom-nav-link" do %>
+        <%= active_link_to edit_book_path(@book), class: "bottom-nav-link" do %>
           <i class="fas fa-box-open fa-lg"></i><br>
           <small>新着の評定</small>
         <% end %>
