--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,7 @@
           <div class="form-row">
             <div class="form-group col-md-11 col-10 pl-3">
               <%= f.text_field :content, type: "text", class: "form-control", placeholder: "おしゃれなカフェいっぱい知ってる！" %>
-              <%= f.hidden_field :review_type, value: "1" %>
+              <%= f.hidden_field :review_type, value: "good" %>
             </div>
             <div class="form-group review-send col-md-1 col-2">
               <%= f.submit "送信", class: "review-send__button btn btn-sm btn-outline-info btn-round"%>
@@ -26,7 +26,7 @@
           <div class="form-row">
             <div class="form-group col-md-11 col-10 pl-3 mb-1">
               <%= f.text_field :content, type: "text", class: "form-control", placeholder: "すぐ遅刻する！モニコしようか？" %>
-              <%= f.hidden_field :review_type, value: "2" %>
+              <%= f.hidden_field :review_type, value: "bad" %>
             </div>
             <div class="form-group review-send col-md-1 col-2 mb-1">
               <%= f.submit "送信", class: "review-send__button btn btn-sm btn-outline-info btn-round"%>
