--- a/app/views/shared/_book-card.html.erb
+++ b/app/views/shared/_book-card.html.erb
@@ -5,7 +5,7 @@
       <span class="align-middle font-weight-bold"><%= user.name %>の通信簿</span>
     </div>
     <span class="pull-right">
-      <%= link_to "編集", "#", class: "btn btn-sm btn-outline-warning btn-round" %>
+      <%= link_to "編集", edit_book_path(@book), class: "btn btn-sm btn-outline-warning btn-round" %>
     </span>
     <div class="clearfix"></div>
     <p class="card-description">
