install material icon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 // bases
 @import "bases/original-variables";
 @import "bases/shared";
+@import "bases/material_icons";
 
 // modules
 @import "modules/navbar";
