--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,7 +13,9 @@
               <%= f.hidden_field :review_type, value: "good" %>
             </div>
             <div class="form-group review-send col-md-1 col-2">
-              <%= f.submit "送信", class: "review-send__button btn btn-sm btn-outline-info btn-round"%>
+              <%= button_tag type: "submit", class: "review-send__button btn btn-sm btn-link text-info" do %>
+                <i class="material-icons align-middle md-30">send</i>
+              <% end %>
             </div>
           </div>
         <% end %>
@@ -29,7 +31,9 @@
               <%= f.hidden_field :review_type, value: "bad" %>
             </div>
             <div class="form-group review-send col-md-1 col-2 mb-1">
-              <%= f.submit "送信", class: "review-send__button btn btn-sm btn-outline-info btn-round"%>
+              <%= button_tag type: "submit", class: "review-send__button btn btn-sm btn-link text-info" do %>
+                <i class="material-icons align-middle md-30">send</i>
+              <% end %>
             </div>
           </div>
         <% end %>
