border-radius: 20px => 50%

--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -16,7 +16,7 @@
     position: absolute;
     top: -6px;
     left: 24px;
-    border-radius: 20px;
+    border-radius: 50%;
     background-color: $danger-color;
     color: #fff;
     text-align: center;
