make avatar circle

--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -5,3 +5,17 @@
     color: $info-color;
   }
 }
+
+.top-navbar {
+  &__avatar {
+    width: 36px;
+    @media (min-width: 992px) {
+      width: 44px;
+    }
+    border-radius: 50%;
+  }
+
+  &__service-image {
+    width: 210px;
+  }
+}
