--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -1,13 +1,13 @@
-<header>
+<header class="top-navbar">
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <div class="col-md-4 col-2">
         <% if user_signed_in? %>
-          <%= image_tag current_user.image, width: "40px" %>
+          <%= image_tag current_user.image, class: "top-navbar__avatar" %>
         <% end %>
       </div>
       <div class="col-md-4 col-8 text-center">
-        <%= image_tag "service_title.png", width: "210px" %>
+        <%= image_tag "service_title.png", class: "top-navbar__service-image" %>
       </div>
       <div class="col-md-4 col-2 text-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
