--- a/app/assets/stylesheets/pages/reviews.scss
+++ b/app/assets/stylesheets/pages/reviews.scss
@@ -43,12 +43,26 @@
 
 .review-table {
   %__thead {
-    font-size: 14px !important;
+    font-size: 14px;
     @media (max-width: 767px) {
-      font-size: 12px !important;
+      font-size: 12px;
     }
-    font-weight: bold !important;
+    font-weight: bold;
     background: #E6E5E5;
+  }
+
+  %--comment {
+    width: 64px;
+    padding-right: 4px !important;
+    padding-left: 4px !important;
+    text-align: center;
+  }
+
+  %--delete {
+    width: 48px;
+    padding-right: 8px !important;
+    padding-left: 4px !important;
+    text-align: center;
   }
 
   &__thead {
@@ -56,34 +70,22 @@
 
     &--comment {
       @extend %__thead;
-      width: 64px;
-      padding-right: 4px !important;
-      padding-left: 4px !important;
-      text-align: center;
+      @extend %--comment;
     }
 
     &--delete {
       @extend %__thead;
-      width: 48px;
-      padding-right: 8px !important;
-      padding-left: 4px !important;
-      text-align: center;
+      @extend %--delete;
     }
   }
 
   &__tbody {
     &--comment {
-      width: 64px;
-      padding-right: 4px !important;
-      padding-left: 4px !important;
-      text-align: center;
+      @extend %--comment;
     }
 
     &--delete {
-      width: 48px;
-      padding-right: 8px !important;
-      padding-left: 4px !important;
-      text-align: center;
+      @extend %--delete;
     }
   }
 }
