--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,38 +7,7 @@
       <p class="page-section__text">一度承認した評定に対してコメント / 削除ができます。</p>
     </div>
     <!-- BEGIN:review_table -->
-    <%= render partial: "books/review_table", locals: {reviews: @checked_reviews} %>
+    <%= render partial: "books/review_check_table", locals: {reviews: @checked_reviews} %>
     <!-- END:review_table -->
-    <% if @checked_reviews.present? %>
-      <div class="text-center">
-        <button type="button" class="btn btn-outline-danger btn-round" data-toggle="modal" data-target="#deleteConfirmationModal">
-          全ての評定を削除
-        </button>
-      </div>
-    <% end %>
   </section>
 </div>
-
-<!-- BEGIN:Modal -->
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteConfirmationModalLabel">確認</h5>
-      </div>
-      <div class="modal-body">
-        本当に全ての評定を削除しますか？
-      </div>
-      <div class="modal-footer">
-        <div class="left-side">
-          <button type="button" class="btn btn-default btn-link" data-dismiss="modal">キャンセル</button>
-        </div>
-        <div class="divider"></div>
-        <div class="right-side">
-          <%= link_to "削除", "#", class: "btn btn-danger btn-link" %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- END:Modal -->
