--- a/app/views/books/check.html.erb
+++ b/app/views/books/check.html.erb
@@ -7,7 +7,7 @@
       <p class="page-section__text">承認した評定のみが公開されます。<br>ちょっと親に見られたくない評定は、こっそり消しちゃいましょう...！</p>
     </div>
     <!-- BEGIN:review_table -->
-    <%= render partial: "books/review_table", locals: {reviews: @unchecked_reviews} %>
+    <%= render partial: "books/review_check_table", locals: {reviews: @unchecked_reviews} %>
     <!-- END:review_table -->
     <% if @unchecked_reviews.present? %>
       <div class="text-center">
